src/Story.styl
@require "../node_modules/pipe-web-client/index.css"

.story
    position relative

    .header
        background-color #f6f6f6
        border-bottom 1px solid #eee
        display flex
        align-items center
        height 44px

        .title
            flex-grow 0
            font-size 14px
            overflow hidden
            text-indent 20
            text-overflow ellipsis
            white-space nowrap

        .buttons
            display flex
            justify-content flex-end
            flex-grow 1
            > a
                color #666
                cursor pointer
                font-size 14px
                padding 0px 6px
                text-decoration underline
                white-space nowrap

    .presentation-container
        overflow auto
        position relative
        width 100%
        height calc(100% - 44px)

    &.loading:after
        background-color rgba(0,0,0,0.4)
        color white
        content "Loading ..."
        font-size 48
        display flex
        align-items center
        justify-content center
        position absolute
        left 0px
        top 44px
        width 100%
        height calc(100% - 44px)
        z-index 1

    &.expand
        &.loading:after
            top 0px
            height 100%

        .presentation-container
            height 100%

